# scihist_digicoll

./: .gitignore  .irbrc  .solr_wrapper.yml  .travis.yml  Aptfile  Brewfile  Capfile  Gemfile  LICENSE.txt  Procfile  README.md  Rakefile  cap_aws_credentials.yml.example  package.json  passenger-status-service-agent  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements.txt  runtime.txt  vite.config.ts
.claude/: CLAUDE.md  settings.json
.githooks/: pre-commit
.github/workflows/: ci.yml
app/components/: application_component.rb  atom_entry_component.atom.builder  atom_entry_component.rb  audio_player_component.html.erb  audio_player_component.rb  cart_control_component.rb  cart_control_component_multiple.rb  collection_count_component.html.erb  collection_count_component.rb  collection_metadata_component.html.erb  collection_metadata_component.rb  digitization_queue_item_status_form_component.html.erb  download_dropdown_component.rb  (+57 more)
config/: application.rb  blacklight.yml  browse_everything_providers.yml  cable.yml  credentials.yml.enc  database.yml  deploy.rb  heroku_puma.rb  honeybadger.yml  oral_history_legacy_redirects.yml  puma.rb  resque-pool-special-worker-two.yml  resque-pool-special-worker.yml  resque-pool.yml  routes.rb  schedule.rb  scout_apm.yml  secrets.yml  sitemap.rb
db/: schema.rb  structure.sql
docs/: dummy.md  on_demand_derivatives.md
python_script/: extract_pdf_text.py
spec/: rails_helper.rb  spec_helper.rb  util_spec.rb
static_html/: README.md
system_env_spec/: README.md  env_spec_helper.rb  system_env_spec.rb
(+1524 files in other folders)
